--- a/app/globals.css
+++ b/app/globals.css
@@ -6,56 +6,56 @@
 }
 
 @font-face {
-  font-family: 'Pretendard';
-  src: url('./fonts/Pretendard-Thin.woff2') format('woff2');
+  font-family: 'Paperlogy';
+  src: url('./fonts/Paperlogy-1Thin.woff2') format('woff2');
   font-weight: 100;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Pretendard';
-  src: url('./fonts/Pretendard-ExtraLight.woff2') format('woff2');
+  font-family: 'Paperlogy';
+  src: url('./fonts/Paperlogy-2ExtraLight.woff2') format('woff2');
   font-weight: 200;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Pretendard';
-  src: url('./fonts/Pretendard-Light.woff2') format('woff2');
+  font-family: 'Paperlogy';
+  src: url('./fonts/Paperlogy-3Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Pretendard';
-  src: url('./fonts/Pretendard-Regular.woff2') format('woff2');
+  font-family: 'Paperlogy';
+  src: url('./fonts/Paperlogy-4Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Pretendard';
-  src: url('./fonts/Pretendard-Medium.woff2') format('woff2');
+  font-family: 'Paperlogy';
+  src: url('./fonts/Paperlogy-5Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Pretendard';
-  src: url('./fonts/Pretendard-SemiBold.woff2') format('woff2');
+  font-family: 'Paperlogy';
+  src: url('./fonts/Paperlogy-6SemiBold.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Pretendard';
-  src: url('./fonts/Pretendard-Bold.woff2') format('woff2');
+  font-family: 'Paperlogy';
+  src: url('./fonts/Paperlogy-7Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Pretendard';
-  src: url('./fonts/Pretendard-ExtraBold.woff2') format('woff2');
+  font-family: 'Paperlogy';
+  src: url('./fonts/Paperlogy-8ExtraBold.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Pretendard';
-  src: url('./fonts/Pretendard-Black.woff2') format('woff2');
+  font-family: 'Paperlogy';
+  src: url('./fonts/Paperlogy-9Black.woff2') format('woff2');
   font-weight: 900;
   font-style: normal;
 }
@@ -69,7 +69,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #121212;
+    --background: #292a31;
     --foreground: #ededed;
   }
 }
@@ -77,5 +77,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: 'Pretendard', Arial, Helvetica, sans-serif;
+  font-family: 'Paperlogy', Arial, Helvetica, sans-serif;
 }
