--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
 @import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: oklch(21% 0.006 285.885);
+  --foreground: oklch(92% 0.004 286.32);
 }
 
 @font-face {
@@ -65,13 +65,6 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #292a31;
-    --foreground: #ededed;
-  }
 }
 
 body {
